Se agregan validaciones

--- a/views/registrations/create.pug
+++ b/views/registrations/create.pug
@@ -1,7 +1,7 @@
 extend ../layout
 block content
   h1 Registrarse
-  form(action="/users",method="POST")
+  form(action="/signup/",method="POST")
     div.form-group
       label(for="firstName") Nombre
       input(type="text",name="firstName",class="form-control",placeholder="firstName",id="firstName")
@@ -18,4 +18,4 @@ block content
       label(for="password_confirmation") Repetir Contraseña
       input(type="password",name="password_confirmation",class="form-control",placeholder="Repetir Contraseña",id="password_confirmation")
     input(type="submit",value="Registrar", class="btn btn-primary")
-    a(href="/login",class="btn btn-info") Login
+    a(href="/",class="btn btn-info") Login
