cerrando sesion correctamente

--- a/views/auth/signin.pug
+++ b/views/auth/signin.pug
@@ -1,7 +1,7 @@
 extend ../layout
 block content
   h1 Iniciar Sesión
-  form(action="/login/",method="POST")
+  form(action="/",method="POST")
     div.form-group
       label(for="email") Email
       input(type="email",name="email",class="form-control",placeholder="email",id="email")
