--- a/views/tasks/index.pug
+++ b/views/tasks/index.pug
@@ -1,4 +1,4 @@
-extend ../layout
+extend ../dashboard/layout
 block content
 	h1 Tareas
 		a(href="/tasks/create",class="btn btn-primary float-right") Crear
