--- a/views/tasks/index.pug
+++ b/views/tasks/index.pug
@@ -1,23 +1,25 @@
 extend ../dashboard/layout
 block content
 	h1 Tareas
-		a(href="/tasks/create",class="btn btn-primary float-right") Crear
+		a(href="/app/tasks/create",class="btn btn-primary float-right") Crear
 	table("class"="table table-striped")
 		thead
 			tr
 				th Nombre Tarea
+				th Propietario
 				th
 		tbody
 			each task in tasks 
 				tr
 					td= task.description
+					td= task.user.email
 					td
 						.btn-group
-							form(action="/tasks/"+task.id, method="POST")
+							form(action="/app/tasks/"+task.id, method="POST")
 									input(type="hidden",value="DELETE",name="_method")
 									input(type="submit",value="Eliminar",class="btn btn-danger")
-							a(href="/tasks/"+task.id).btn.btn-info Ver
-							a(href="/tasks/"+task.id+"/edit").btn.btn-primary Editar
+							a(href="/app/tasks/"+task.id).btn.btn-info Ver
+							a(href="/app/tasks/"+task.id+"/edit").btn.btn-primary Editar
 			else
 				tr
 					td(colspan="2") No hay registros
