--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -1,1 +1,7 @@
 extend ../dashboard/layout
+block content
+  h1 Información de Usuario
+  ul
+    li= 'Nombre:'+ user.firstName
+    li= 'Apellido:'+ user.lastName
+    li= 'Email:'+ user.email 
